--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transactions</title>
-    <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
-    <link rel="stylesheet" href="../dist/output.css">
+    <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="./dist/output.css">
 </head>
 <body class="bg-main">
     <div class="loading-layer absolute top-0 left-0 right-0 bottom-0 justify-center items-center bg-main z-30 hidden ">
@@ -51,8 +51,8 @@
             <i class="fa-solid fa-arrow-up fa-beat text-money fa-4x cursor-pointer"></i>
           
     </div>
-    <script src="../node_modules/chart.js/dist/chart.umd.js"></script>
-    <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="./js/main.js" type='module'></script>
+    <script src="./node_modules/chart.js/dist/chart.umd.js"></script>
+    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="./src/js/main.js" type='module'></script>
 </body>
 </html>
